# comfyui-rocm-setup

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: KREA2_TEST.md  KREA2_TEST_STRATEGY.md
examples/: krea2_fp8_official_txt2img_workflow.json  krea2_gguf_fp8_text_encoder_validated_workflow.json  krea2_prompt_presets.json  krea2_txt2img_workflow.json
src/comfyui_rocm_setup/: __init__.py  cli.py  config_gen.py  detector.py  gpu_db.py  health.py  installer.py
tests/: test_comfyui_rocm_setup.py
